Init figure widgets

--- a/res.qrc
+++ b/res.qrc
@@ -1,5 +1,7 @@
 <RCC>
     <qresource prefix="/images">
         <file>shinzo.jpg</file>
+        <file>vgath-logo.png</file>
+        <file>layers_icon.png</file>
     </qresource>
 </RCC>
