Implemented Base Layout

--- a/res.qrc
+++ b/res.qrc
@@ -3,5 +3,6 @@
         <file>shinzo.jpg</file>
         <file>vgath-logo.png</file>
         <file>layers_icon.png</file>
+        <file>tools_icon.png</file>
     </qresource>
 </RCC>
