--- a/Popups/ResizePopup/resizepopup.ui
+++ b/Popups/ResizePopup/resizepopup.ui
@@ -145,7 +145,7 @@ padding: 3px;
         <property name="styleSheet">
          <string notr="true">color: #FFF;
 background-color: rgb(105, 105, 105);
-border-raduis: 3px;
+border-radius: 3px;
 border: none;
 padding: 5px 25px;
 </string>
@@ -160,7 +160,7 @@ padding: 5px 25px;
         <property name="styleSheet">
          <string notr="true">background-color: rgb(0, 97, 230);
 color: white;
-border-raduis: 3px;
+border-radius: 3px;
 border: none;
 padding: 5px 25px;
 </string>
