--- a/Popups/LightenPopup/lightenpopup.ui
+++ b/Popups/LightenPopup/lightenpopup.ui
@@ -1,30 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>ResizePopup</class>
- <widget class="QWidget" name="ResizePopup">
-  <property name="enabled">
-   <bool>true</bool>
-  </property>
+ <class>LightenPopup</class>
+ <widget class="QWidget" name="LightenPopup">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>368</width>
-    <height>218</height>
+    <width>400</width>
+    <height>267</height>
    </rect>
   </property>
-  <property name="maximumSize">
-   <size>
-    <width>368</width>
-    <height>218</height>
-   </size>
-  </property>
   <property name="windowTitle">
-   <string>Resize Image</string>
-  </property>
-  <property name="windowIcon">
-   <iconset>
-    <normaloff>:/images/vgath-logo.png</normaloff>:/images/vgath-logo.png</iconset>
+   <string>Form</string>
   </property>
   <property name="styleSheet">
    <string notr="true">background-color: rgb(57,57, 57);
@@ -39,7 +26,7 @@
      <property name="frameShadow">
       <enum>QFrame::Raised</enum>
      </property>
-     <layout class="QVBoxLayout" name="verticalLayout_2">
+     <layout class="QVBoxLayout" name="verticalLayout_2" stretch="2,1,1">
       <item>
        <widget class="QFrame" name="frame_3">
         <property name="frameShape">
@@ -48,20 +35,26 @@
         <property name="frameShadow">
          <enum>QFrame::Raised</enum>
         </property>
-        <layout class="QHBoxLayout" name="horizontalLayout_2" stretch="1,2">
+        <layout class="QHBoxLayout" name="horizontalLayout_2" stretch="0,0">
          <item>
           <widget class="QLabel" name="label">
+           <property name="font">
+            <font>
+             <pointsize>12</pointsize>
+             <bold>true</bold>
+            </font>
+           </property>
            <property name="styleSheet">
             <string notr="true">color: #FFF;
 font-weight: bold;</string>
            </property>
            <property name="text">
-            <string>Scale X: </string>
+            <string>Lighten</string>
            </property>
           </widget>
          </item>
          <item>
-          <widget class="QDoubleSpinBox" name="ScaleXInput">
+          <widget class="QDoubleSpinBox" name="LightenInput">
            <property name="styleSheet">
             <string notr="true">color: #FFF;
 background-color: rgb(41, 41, 41);
@@ -69,8 +62,77 @@ border: none;
 padding: 3px;
 </string>
            </property>
+           <property name="suffix">
+            <string>%</string>
+           </property>
+           <property name="minimum">
+            <double>-100.000000000000000</double>
+           </property>
+           <property name="maximum">
+            <double>100.000000000000000</double>
+           </property>
+           <property name="singleStep">
+            <double>0.050000000000000</double>
+           </property>
            <property name="value">
-            <double>1.000000000000000</double>
+            <double>0.000000000000000</double>
+           </property>
+          </widget>
+         </item>
+        </layout>
+       </widget>
+      </item>
+      <item>
+       <widget class="QFrame" name="frame_5">
+        <property name="frameShape">
+         <enum>QFrame::StyledPanel</enum>
+        </property>
+        <property name="frameShadow">
+         <enum>QFrame::Raised</enum>
+        </property>
+        <layout class="QHBoxLayout" name="horizontalLayout_4">
+         <item>
+          <widget class="QLabel" name="label_2">
+           <property name="font">
+            <font>
+             <pointsize>10</pointsize>
+             <bold>true</bold>
+            </font>
+           </property>
+           <property name="styleSheet">
+            <string notr="true">color: white;</string>
+           </property>
+           <property name="text">
+            <string>-100%</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <spacer name="horizontalSpacer_2">
+           <property name="orientation">
+            <enum>Qt::Horizontal</enum>
+           </property>
+           <property name="sizeHint" stdset="0">
+            <size>
+             <width>40</width>
+             <height>20</height>
+            </size>
+           </property>
+          </spacer>
+         </item>
+         <item>
+          <widget class="QLabel" name="label_3">
+           <property name="font">
+            <font>
+             <pointsize>10</pointsize>
+             <bold>true</bold>
+            </font>
+           </property>
+           <property name="styleSheet">
+            <string notr="true">color: white;</string>
+           </property>
+           <property name="text">
+            <string>100%</string>
            </property>
           </widget>
          </item>
@@ -85,30 +147,26 @@ padding: 3px;
         <property name="frameShadow">
          <enum>QFrame::Raised</enum>
         </property>
-        <layout class="QHBoxLayout" name="horizontalLayout_3" stretch="1,2">
+        <layout class="QHBoxLayout" name="horizontalLayout_3" stretch="0">
          <item>
-          <widget class="QLabel" name="label_2">
-           <property name="styleSheet">
-            <string notr="true">color: #FFF;
-font-weight: bold;</string>
+          <widget class="QSlider" name="lightenSlider">
+           <property name="maximum">
+            <number>100</number>
            </property>
-           <property name="text">
-            <string>Scale Y:</string>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <widget class="QDoubleSpinBox" name="ScaleYInput">
-           <property name="styleSheet">
-            <string notr="true">color: #FFF;
-background-color: rgb(41, 41, 41);
-border: none;
-padding: 3px;
-
-</string>
+           <property name="singleStep">
+            <number>1</number>
            </property>
            <property name="value">
-            <double>1.000000000000000</double>
+            <number>50</number>
+           </property>
+           <property name="orientation">
+            <enum>Qt::Horizontal</enum>
+           </property>
+           <property name="tickPosition">
+            <enum>QSlider::TicksAbove</enum>
+           </property>
+           <property name="tickInterval">
+            <number>5</number>
            </property>
           </widget>
          </item>
