--- a/toolswidget.ui
+++ b/toolswidget.ui
@@ -26,7 +26,7 @@
     <string/>
    </property>
    <property name="pixmap">
-    <pixmap resource="res.qrc">:/images/tools_icon.png</pixmap>
+    <pixmap>:/images/tools_icon.png</pixmap>
    </property>
   </widget>
   <widget class="QLabel" name="label">
@@ -72,7 +72,7 @@ border-radius: 4px;</string>
    </property>
    <layout class="QGridLayout" name="gridLayout">
     <item row="0" column="0">
-     <widget class="QPushButton" name="pushButton">
+     <widget class="QPushButton" name="resizeButton">
       <property name="styleSheet">
        <string notr="true">border: 1px solid black;
 padding: 4px;
@@ -97,7 +97,7 @@ background-color: white;
      </widget>
     </item>
     <item row="2" column="0">
-     <widget class="QPushButton" name="pushButton_3">
+     <widget class="QPushButton" name="lightenButton">
       <property name="styleSheet">
        <string notr="true">border: 1px solid black;
 padding: 4px;
@@ -111,8 +111,6 @@ background-color: white;</string>
    </layout>
   </widget>
  </widget>
- <resources>
-  <include location="res.qrc"/>
- </resources>
+ <resources/>
  <connections/>
 </ui>
