--- a/Popups/CannyPopup/cannypopup.ui
+++ b/Popups/CannyPopup/cannypopup.ui
@@ -1,30 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>ResizePopup</class>
- <widget class="QWidget" name="ResizePopup">
-  <property name="enabled">
-   <bool>true</bool>
-  </property>
+ <class>cannyPopup</class>
+ <widget class="QWidget" name="cannyPopup">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>368</width>
-    <height>218</height>
+    <width>400</width>
+    <height>297</height>
    </rect>
   </property>
-  <property name="maximumSize">
-   <size>
-    <width>368</width>
-    <height>218</height>
-   </size>
-  </property>
   <property name="windowTitle">
-   <string>Resize Image</string>
-  </property>
-  <property name="windowIcon">
-   <iconset resource="../../res.qrc">
-    <normaloff>:/images/vgath-logo.png</normaloff>:/images/vgath-logo.png</iconset>
+   <string>Canny Filter</string>
   </property>
   <property name="styleSheet">
    <string notr="true">background-color: rgb(57,57, 57);
@@ -41,6 +28,78 @@
      </property>
      <layout class="QVBoxLayout" name="verticalLayout_2">
       <item>
+       <widget class="QFrame" name="frame_5">
+        <property name="frameShape">
+         <enum>QFrame::StyledPanel</enum>
+        </property>
+        <property name="frameShadow">
+         <enum>QFrame::Raised</enum>
+        </property>
+        <layout class="QHBoxLayout" name="horizontalLayout_4" stretch="1,2">
+         <property name="topMargin">
+          <number>5</number>
+         </property>
+         <property name="bottomMargin">
+          <number>0</number>
+         </property>
+         <item>
+          <widget class="QLabel" name="label_3">
+           <property name="styleSheet">
+            <string notr="true">color: #FFF;
+font-weight: bold;</string>
+           </property>
+           <property name="text">
+            <string>Kernel Size</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QFrame" name="frame_6">
+           <property name="styleSheet">
+            <string notr="true">color: #FFF;
+font-weight: bold;</string>
+           </property>
+           <property name="frameShape">
+            <enum>QFrame::StyledPanel</enum>
+           </property>
+           <property name="frameShadow">
+            <enum>QFrame::Raised</enum>
+           </property>
+           <layout class="QHBoxLayout" name="horizontalLayout_5">
+            <property name="bottomMargin">
+             <number>0</number>
+            </property>
+            <item>
+             <widget class="QRadioButton" name="Kernel3Radio">
+              <property name="text">
+               <string>3</string>
+              </property>
+              <property name="checked">
+               <bool>true</bool>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <widget class="QRadioButton" name="Kernel5Radio">
+              <property name="text">
+               <string>5</string>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <widget class="QRadioButton" name="Kernel7Radio">
+              <property name="text">
+               <string>7</string>
+              </property>
+             </widget>
+            </item>
+           </layout>
+          </widget>
+         </item>
+        </layout>
+       </widget>
+      </item>
+      <item>
        <widget class="QFrame" name="frame_3">
         <property name="frameShape">
          <enum>QFrame::StyledPanel</enum>
@@ -56,12 +115,12 @@
 font-weight: bold;</string>
            </property>
            <property name="text">
-            <string>Scale X: </string>
+            <string>Low Theshold</string>
            </property>
           </widget>
          </item>
          <item>
-          <widget class="QDoubleSpinBox" name="ScaleXInput">
+          <widget class="QDoubleSpinBox" name="LowThresholdInput">
            <property name="styleSheet">
             <string notr="true">color: #FFF;
 background-color: rgb(41, 41, 41);
@@ -69,8 +128,11 @@ border: none;
 padding: 3px;
 </string>
            </property>
+           <property name="maximum">
+            <double>254.000000000000000</double>
+           </property>
            <property name="value">
-            <double>1.000000000000000</double>
+            <double>50.000000000000000</double>
            </property>
           </widget>
          </item>
@@ -93,12 +155,12 @@ padding: 3px;
 font-weight: bold;</string>
            </property>
            <property name="text">
-            <string>Scale Y:</string>
+            <string>High Theshold</string>
            </property>
           </widget>
          </item>
          <item>
-          <widget class="QDoubleSpinBox" name="ScaleYInput">
+          <widget class="QDoubleSpinBox" name="HighThresholdInput">
            <property name="styleSheet">
             <string notr="true">color: #FFF;
 background-color: rgb(41, 41, 41);
@@ -107,8 +169,11 @@ padding: 3px;
 
 </string>
            </property>
+           <property name="maximum">
+            <double>255.000000000000000</double>
+           </property>
            <property name="value">
-            <double>1.000000000000000</double>
+            <double>151.000000000000000</double>
            </property>
           </widget>
          </item>
@@ -175,8 +240,6 @@ padding: 5px 25px;
    </item>
   </layout>
  </widget>
- <resources>
-  <include location="../../res.qrc"/>
- </resources>
+ <resources/>
  <connections/>
 </ui>
