--- a/toolswidget.ui
+++ b/toolswidget.ui
@@ -26,7 +26,7 @@
     <string/>
    </property>
    <property name="pixmap">
-    <pixmap>:/images/tools_icon.png</pixmap>
+    <pixmap resource="res.qrc">:/images/tools_icon.png</pixmap>
    </property>
   </widget>
   <widget class="QLabel" name="label">
@@ -71,6 +71,18 @@ border-radius: 4px;</string>
     <enum>QFrame::Raised</enum>
    </property>
    <layout class="QGridLayout" name="gridLayout">
+    <item row="3" column="0">
+     <widget class="QPushButton" name="lightenButton">
+      <property name="styleSheet">
+       <string notr="true">border: 1px solid black;
+padding: 4px;
+background-color: white;</string>
+      </property>
+      <property name="text">
+       <string>Lighten</string>
+      </property>
+     </widget>
+    </item>
     <item row="0" column="0">
      <widget class="QPushButton" name="resizeButton">
       <property name="styleSheet">
@@ -97,20 +109,23 @@ background-color: white;
      </widget>
     </item>
     <item row="2" column="0">
-     <widget class="QPushButton" name="lightenButton">
+     <widget class="QPushButton" name="pushButton_3">
       <property name="styleSheet">
        <string notr="true">border: 1px solid black;
 padding: 4px;
-background-color: white;</string>
+background-color: white;
+</string>
       </property>
       <property name="text">
-       <string>Lighten</string>
+       <string>Canny</string>
       </property>
      </widget>
     </item>
    </layout>
   </widget>
  </widget>
- <resources/>
+ <resources>
+  <include location="res.qrc"/>
+ </resources>
  <connections/>
 </ui>
