--- a/toolswidget.ui
+++ b/toolswidget.ui
@@ -97,7 +97,7 @@ background-color: white;
      </widget>
     </item>
     <item row="3" column="0">
-     <widget class="QPushButton" name="pushButton_5">
+     <widget class="QPushButton" name="blurButton">
       <property name="styleSheet">
        <string notr="true">border: 1px solid black;
 padding: 4px;
@@ -148,7 +148,7 @@ background-color: white;</string>
      </widget>
     </item>
     <item row="5" column="0">
-     <widget class="QPushButton" name="pushButton_6">
+     <widget class="QPushButton" name="sobelButton">
       <property name="styleSheet">
        <string notr="true">border: 1px solid black;
 padding: 4px;
