--- a/Widgets/MainWindow/mainwindow.ui
+++ b/Widgets/MainWindow/mainwindow.ui
@@ -19,6 +19,10 @@
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
+  <property name="windowIcon">
+   <iconset resource="../../res.qrc">
+    <normaloff>:/images/ressources/vgath-logo.png</normaloff>:/images/ressources/vgath-logo.png</iconset>
+  </property>
   <property name="styleSheet">
    <string notr="true">background-color: rgb(51, 51, 51);
 </string>
@@ -190,6 +194,8 @@ background-color: rgb(100,100, 100);</string>
    <container>1</container>
   </customwidget>
  </customwidgets>
- <resources/>
+ <resources>
+  <include location="../../res.qrc"/>
+ </resources>
  <connections/>
 </ui>
