--- a/Widgets/ToolWidget/toolswidget.ui
+++ b/Widgets/ToolWidget/toolswidget.ui
@@ -26,7 +26,7 @@
     <string/>
    </property>
    <property name="pixmap">
-    <pixmap resource="res.qrc">:/images/tools_icon.png</pixmap>
+    <pixmap resource="../../res.qrc">:/images/ressources/tools_icon.png</pixmap>
    </property>
   </widget>
   <widget class="QLabel" name="label">
@@ -164,7 +164,7 @@ background-color: white;
   </widget>
  </widget>
  <resources>
-  <include location="res.qrc"/>
+  <include location="../../res.qrc"/>
  </resources>
  <connections/>
 </ui>
