--- a/res.qrc
+++ b/res.qrc
@@ -5,5 +5,7 @@
         <file>ressources/shinzo.jpg</file>
         <file>ressources/tools_icon.png</file>
         <file>ressources/vgath-logo.png</file>
+        <file>ressources/hand_cursor_icon.png</file>
+        <file>ressources/pen_icon.png</file>
     </qresource>
 </RCC>
