--- a/Widgets/LeftInterface/leftinterface.ui
+++ b/Widgets/LeftInterface/leftinterface.ui
@@ -7,8 +7,14 @@
     <x>0</x>
     <y>0</y>
     <width>135</width>
-    <height>681</height>
+    <height>755</height>
    </rect>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>16777215</width>
+    <height>755</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>Form</string>
@@ -18,6 +24,48 @@
 </string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout_3">
+   <item>
+    <widget class="QFrame" name="frame_3">
+     <property name="frameShape">
+      <enum>QFrame::StyledPanel</enum>
+     </property>
+     <property name="frameShadow">
+      <enum>QFrame::Raised</enum>
+     </property>
+     <layout class="QHBoxLayout" name="horizontalLayout">
+      <item>
+       <widget class="QPushButton" name="undoButton">
+        <property name="styleSheet">
+         <string notr="true">color: #FFF;
+background-color: rgb(105, 105, 105);
+border-radius: 3px;
+border: none;
+padding: 5px 3px;
+</string>
+        </property>
+        <property name="text">
+         <string>undo</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QPushButton" name="redoButton">
+        <property name="styleSheet">
+         <string notr="true">color: #FFF;
+background-color: rgb(105, 105, 105);
+border-radius: 3px;
+border: none;
+padding: 5px 3px;
+</string>
+        </property>
+        <property name="text">
+         <string>redo</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </widget>
+   </item>
    <item>
     <widget class="QFrame" name="frame">
      <property name="styleSheet">
@@ -265,6 +313,45 @@ padding: 5px 25px;</string>
         </property>
         <property name="text">
          <string/>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="Line" name="line">
+        <property name="styleSheet">
+         <string notr="true">background-color: rgb(80, 80, 80);
+padding-top: 7px;
+margin-top: 7px;</string>
+        </property>
+        <property name="orientation">
+         <enum>Qt::Horizontal</enum>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QLabel" name="label_3">
+        <property name="styleSheet">
+         <string notr="true">color: white;
+font-weight: bold;
+text-align: center;
+padding-botton: 5px;
+padding-top: 3px;</string>
+        </property>
+        <property name="text">
+         <string>Select Color</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QLineEdit" name="lineEdit">
+        <property name="styleSheet">
+         <string notr="true">color: black;
+background-color: white;
+border: 1px solid rgb(80, 80, 80);
+font-weight: bold;
+text-align: center;
+padding-botton: 5px;
+padding-top: 3px;</string>
         </property>
        </widget>
       </item>
