--- a/Widgets/MainWindow/mainwindow.ui
+++ b/Widgets/MainWindow/mainwindow.ui
@@ -49,11 +49,11 @@
        </item>
        <item>
         <widget class="QWidget" name="rightInterface" native="true">
-         <layout class="QVBoxLayout" name="verticalLayout_4">
-          <item>
+         <layout class="QGridLayout" name="gridLayout_2">
+          <item row="0" column="0">
            <widget class="ToolsWidget" name="widget_4" native="true"/>
           </item>
-          <item>
+          <item row="1" column="0">
            <widget class="LayerWidget" name="widget_3" native="true"/>
           </item>
          </layout>
