--- a/Widgets/ToolWidget/toolswidget.ui
+++ b/Widgets/ToolWidget/toolswidget.ui
@@ -13,155 +13,161 @@
   <property name="windowTitle">
    <string>Form</string>
   </property>
-  <widget class="QLabel" name="Icon">
-   <property name="geometry">
-    <rect>
-     <x>10</x>
-     <y>10</y>
-     <width>31</width>
-     <height>21</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string/>
-   </property>
-   <property name="pixmap">
-    <pixmap resource="../../res.qrc">:/images/ressources/tools_icon.png</pixmap>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label">
-   <property name="geometry">
-    <rect>
-     <x>40</x>
-     <y>10</y>
-     <width>63</width>
-     <height>20</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <pointsize>10</pointsize>
-     <bold>true</bold>
-    </font>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">color: #EEE;</string>
-   </property>
-   <property name="text">
-    <string>Tools</string>
-   </property>
-  </widget>
-  <widget class="QFrame" name="frame">
-   <property name="geometry">
-    <rect>
-     <x>10</x>
-     <y>40</y>
-     <width>191</width>
-     <height>291</height>
-    </rect>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">background-color: #777;
+  <property name="styleSheet">
+   <string notr="true">background-color: rgb(57,57, 57);
+</string>
+  </property>
+  <layout class="QVBoxLayout" name="verticalLayout">
+   <item>
+    <widget class="QFrame" name="frame_2">
+     <property name="frameShape">
+      <enum>QFrame::StyledPanel</enum>
+     </property>
+     <property name="frameShadow">
+      <enum>QFrame::Raised</enum>
+     </property>
+     <layout class="QHBoxLayout" name="horizontalLayout" stretch="1,5">
+      <property name="topMargin">
+       <number>5</number>
+      </property>
+      <property name="bottomMargin">
+       <number>5</number>
+      </property>
+      <item>
+       <widget class="QLabel" name="Icon">
+        <property name="text">
+         <string/>
+        </property>
+        <property name="pixmap">
+         <pixmap resource="../../res.qrc">:/images/ressources/tools_icon.png</pixmap>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QLabel" name="label">
+        <property name="font">
+         <font>
+          <pointsize>10</pointsize>
+          <bold>true</bold>
+         </font>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">color: #EEE;</string>
+        </property>
+        <property name="text">
+         <string>Tools</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </widget>
+   </item>
+   <item>
+    <widget class="QFrame" name="frame">
+     <property name="styleSheet">
+      <string notr="true">background-color: #777;
 border-radius: 4px;</string>
-   </property>
-   <property name="frameShape">
-    <enum>QFrame::StyledPanel</enum>
-   </property>
-   <property name="frameShadow">
-    <enum>QFrame::Raised</enum>
-   </property>
-   <layout class="QGridLayout" name="gridLayout">
-    <item row="6" column="0">
-     <widget class="QPushButton" name="lightenButton">
-      <property name="styleSheet">
-       <string notr="true">border: 1px solid black;
+     </property>
+     <property name="frameShape">
+      <enum>QFrame::StyledPanel</enum>
+     </property>
+     <property name="frameShadow">
+      <enum>QFrame::Raised</enum>
+     </property>
+     <layout class="QGridLayout" name="gridLayout">
+      <item row="6" column="0">
+       <widget class="QPushButton" name="lightenButton">
+        <property name="styleSheet">
+         <string notr="true">border: 1px solid black;
 padding: 4px;
 background-color: white;</string>
-      </property>
-      <property name="text">
-       <string>Lighten</string>
-      </property>
-     </widget>
-    </item>
-    <item row="4" column="0">
-     <widget class="QPushButton" name="pushButton_3">
-      <property name="styleSheet">
-       <string notr="true">border: 1px solid black;
+        </property>
+        <property name="text">
+         <string>Lighten</string>
+        </property>
+       </widget>
+      </item>
+      <item row="4" column="0">
+       <widget class="QPushButton" name="pushButton_3">
+        <property name="styleSheet">
+         <string notr="true">border: 1px solid black;
 padding: 4px;
 background-color: white;
 </string>
-      </property>
-      <property name="text">
-       <string>Canny</string>
-      </property>
-     </widget>
-    </item>
-    <item row="3" column="0">
-     <widget class="QPushButton" name="blurButton">
-      <property name="styleSheet">
-       <string notr="true">border: 1px solid black;
+        </property>
+        <property name="text">
+         <string>Canny</string>
+        </property>
+       </widget>
+      </item>
+      <item row="3" column="0">
+       <widget class="QPushButton" name="blurButton">
+        <property name="styleSheet">
+         <string notr="true">border: 1px solid black;
 padding: 4px;
 background-color: white;
 </string>
-      </property>
-      <property name="text">
-       <string>Blur</string>
-      </property>
-     </widget>
-    </item>
-    <item row="1" column="0">
-     <widget class="QPushButton" name="erodeButton">
-      <property name="styleSheet">
-       <string notr="true">border: 1px solid black;
+        </property>
+        <property name="text">
+         <string>Blur</string>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="0">
+       <widget class="QPushButton" name="erodeButton">
+        <property name="styleSheet">
+         <string notr="true">border: 1px solid black;
 padding: 4px;
 background-color: white;
 </string>
-      </property>
-      <property name="text">
-       <string>Erode</string>
-      </property>
-     </widget>
-    </item>
-    <item row="2" column="0">
-     <widget class="QPushButton" name="dilateButton">
-      <property name="styleSheet">
-       <string notr="true">border: 1px solid black;
+        </property>
+        <property name="text">
+         <string>Erode</string>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="0">
+       <widget class="QPushButton" name="dilateButton">
+        <property name="styleSheet">
+         <string notr="true">border: 1px solid black;
 padding: 4px;
 background-color: white;
 </string>
-      </property>
-      <property name="text">
-       <string>Dilate</string>
-      </property>
-     </widget>
-    </item>
-    <item row="0" column="0">
-     <widget class="QPushButton" name="resizeButton">
-      <property name="styleSheet">
-       <string notr="true">border: 1px solid black;
+        </property>
+        <property name="text">
+         <string>Dilate</string>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="0">
+       <widget class="QPushButton" name="resizeButton">
+        <property name="styleSheet">
+         <string notr="true">border: 1px solid black;
 padding: 4px;
 background-color: white;</string>
-      </property>
-      <property name="text">
-       <string>Resize</string>
-      </property>
-     </widget>
-    </item>
-    <item row="5" column="0">
-     <widget class="QPushButton" name="sobelButton">
-      <property name="styleSheet">
-       <string notr="true">border: 1px solid black;
+        </property>
+        <property name="text">
+         <string>Resize</string>
+        </property>
+       </widget>
+      </item>
+      <item row="5" column="0">
+       <widget class="QPushButton" name="sobelButton">
+        <property name="styleSheet">
+         <string notr="true">border: 1px solid black;
 padding: 4px;
 background-color: white;
 </string>
-      </property>
-      <property name="text">
-       <string>Sobel</string>
-      </property>
-     </widget>
-    </item>
-   </layout>
-  </widget>
+        </property>
+        <property name="text">
+         <string>Sobel</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </widget>
+   </item>
+  </layout>
  </widget>
  <resources>
   <include location="../../res.qrc"/>
